--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build --webpack",
+    "build": "find . -maxdepth 3 -not -path '*/.*' && next build --webpack",
     "start": "next start",
     "lint": "eslint"
   },
