--- a/web/package.json
+++ b/web/package.json
@@ -2,11 +2,10 @@
   "name": "web",
   "version": "0.1.0",
   "private": true,
-  ""scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start"
-}
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
