Fix: Clear path aliases and remove turbopack root for Vercel build

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -26,6 +26,15 @@
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "@/app/*": [
+        "app/*"
+      ],
+      "@/components/*": [
+        "components/*"
+      ],
+      "@/supabase/*": [
+        "supabase/*"
       ]
     }
   },
