--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -17,10 +17,10 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "incremental": true,
-    "baseUrl": "..",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
-        "web/*"
+        "./*"
       ]
     },
     "plugins": [
