Fix: Implement npm workspaces and TS project references for robust monorepo build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,17 @@
         "baseUrl": ".",
         "paths": {
             "@/*": [
-                "./web/*"
+                "web/*"
             ]
-        }
+        },
+        "composite": true,
+        "declaration": true,
+        "declarationMap": true
     },
-    "include": [
-        "web/**/*.ts",
-        "web/**/*.tsx"
+    "include": [],
+    "references": [
+        {
+            "path": "./web"
+        }
     ]
 }
