Major Refactor: Move web app to repository root for stable Vercel deployment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,6 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "incremental": true,
-    "composite": true,
-    "declaration": true,
     "baseUrl": ".",
     "paths": {
       "@/*": [
@@ -35,11 +33,10 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts",
-    "**/*.mts"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "mobile"
   ]
 }
