--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "16.1.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next": "15.1.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "lucide-react": "^0.471.1",
+    "@heroicons/react": "^2.2.0",
     "framer-motion": "^11.17.0",
     "@supabase/supabase-js": "^2.47.12",
     "@supabase/ssr": "^0.5.2",
@@ -25,6 +26,8 @@
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.4"
   }
 }
