--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,12 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "app",
+    "components",
+    "supabase",
+    "utils",
+    "lib"
   ],
   "exclude": [
     "node_modules",
