Verified: Local build successful with relative paths, removed deprecated eslint config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,8 @@
     "components",
     "supabase",
     "utils",
-    "lib"
+    "lib",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
