--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.0.0",
     "lucide-react": "^0.471.1",
     "@heroicons/react": "^2.2.0",
+    "@google/generative-ai": "^0.24.1",
     "framer-motion": "^11.17.0",
     "@supabase/supabase-js": "^2.47.12",
     "@supabase/ssr": "^0.5.2",
