--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.1.4",
+    "next": "^16.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "lucide-react": "^0.471.1",
@@ -30,6 +30,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "eslint": "^9",
-    "eslint-config-next": "15.1.4"
+    "eslint-config-next": "^16.1.1"
   }
 }
